Restyle hats in dark mode to correspond to correct light mode style

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -103,9 +103,9 @@
 		--color-tag-meta-bg: #2c2c2c;
 		--color-tag-meta-border: #484848;
 
-		--color-hat-crown-fill: #191919;
-		--color-hat-crown-stroke: #2a2a2a;
-		--color-hat-brim-stroke: #505050;
+		--color-hat-crown-fill: #333;
+		--color-hat-crown-stroke: #181818;
+		--color-hat-brim-stroke: #222;
 
 		--color-flash-bg-error: #451714;
 		--color-flash-bg-success: #273820;
