--- a/app/assets/stylesheets/local/lobsters.css
+++ b/app/assets/stylesheets/local/lobsters.css
@@ -17,8 +17,8 @@
 		--color-lobsters-tag-special-bg: #3b1719;
 		--color-lobsters-tag-special-border: #611a21;
 
-		--color-lobsters-hat-sysop-crown-fill: #271d1d;
-		--color-lobsters-hat-sysop-brim-stroke: #4e3939;
+		--color-lobsters-hat-sysop-crown-fill: #362727;
+		--color-lobsters-hat-sysop-brim-stroke: #241a1a;
 	}
 }
 
